crates/loxide_parser/snapshots/parser/output/declarations.snap
---
source: crates/loxide_parser/src/parser.rs
expression: results
---
(
    [
        VarDeclaration(
            Identifier {
                name: "a",
            },
            Some(
                Expr {
                    kind: Literal(
                        Number(
                            1.0,
                        ),
                    ),
                },
            ),
        ),
        VarDeclaration(
            Identifier {
                name: "b",
            },
            None,
        ),
    ],
    [],
)
