crates/loxide_parser/snapshots/parser/output/factor.snap
---
source: crates/loxide_parser/src/parser.rs
expression: asts
---
[
    Ok(
        Expr {
            kind: Binary(
                BinaryExpr {
                    lhs: Expr {
                        kind: Binary(
                            BinaryExpr {
                                lhs: Expr {
                                    kind: Literal(
                                        Number(
                                            2.0,
                                        ),
                                    ),
                                    span: [Span],
                                },
                                rhs: Expr {
                                    kind: Literal(
                                        Number(
                                            3.0,
                                        ),
                                    ),
                                    span: [Span],
                                },
                                operator: Star,
                            },
                        ),
                        span: [Span],
                    },
                    rhs: Expr {
                        kind: Literal(
                            Number(
                                6.0,
                            ),
                        ),
                        span: [Span],
                    },
                    operator: Slash,
                },
            ),
            span: [Span],
        },
    ),
]
