crates/loxide_parser/snapshots/parser/output/single_statement.snap
---
source: crates/loxide_parser/src/parser.rs
expression: asts
---
[
    Ok(
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    1.0,
                                ),
                            ),
                            span: [Span],
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    2.0,
                                ),
                            ),
                            span: [Span],
                        },
                        operator: Plus,
                    },
                ),
                span: [Span],
            },
        ),
    ),
    Ok(
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    3.0,
                                ),
                            ),
                            span: [Span],
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    4.0,
                                ),
                            ),
                            span: [Span],
                        },
                        operator: Less,
                    },
                ),
                span: [Span],
            },
        ),
    ),
    Ok(
        PrintStmt(
            Expr {
                kind: Literal(
                    String(
                        "hello world",
                    ),
                ),
                span: [Span],
            },
        ),
    ),
]
