crates/loxide_parser/snapshots/parser/output/unary.snap
---
source: crates/loxide_parser/src/parser.rs
expression: asts
---
[
    Ok(
        Expr {
            kind: Unary(
                UnaryExpr {
                    operator: Minus,
                    expr: Expr {
                        kind: Literal(
                            Number(
                                1.0,
                            ),
                        ),
                        span: [Span],
                    },
                },
            ),
            span: [Span],
        },
    ),
    Ok(
        Expr {
            kind: Unary(
                UnaryExpr {
                    operator: Bang,
                    expr: Expr {
                        kind: Literal(
                            Boolean(
                                true,
                            ),
                        ),
                        span: [Span],
                    },
                },
            ),
            span: [Span],
        },
    ),
    Ok(
        Expr {
            kind: Unary(
                UnaryExpr {
                    operator: Bang,
                    expr: Expr {
                        kind: Unary(
                            UnaryExpr {
                                operator: Bang,
                                expr: Expr {
                                    kind: Literal(
                                        Boolean(
                                            false,
                                        ),
                                    ),
                                    span: [Span],
                                },
                            },
                        ),
                        span: [Span],
                    },
                },
            ),
            span: [Span],
        },
    ),
]
