crates/loxide_parser/snapshots/parser/output/while_statement.snap
---
source: crates/loxide_parser/src/parser.rs
expression: results
---
(
    [
        While(
            WhileStmt {
                condition: Expr {
                    kind: Literal(
                        Boolean(
                            true,
                        ),
                    ),
                    span: [Span],
                },
                body: Block(
                    [
                        While(
                            WhileStmt {
                                condition: Expr {
                                    kind: Literal(
                                        Boolean(
                                            false,
                                        ),
                                    ),
                                    span: [Span],
                                },
                                body: Block(
                                    [
                                        Expression(
                                            Expr {
                                                kind: Literal(
                                                    String(
                                                        "Hello world",
                                                    ),
                                                ),
                                                span: [Span],
                                            },
                                        ),
                                    ],
                                ),
                            },
                        ),
                    ],
                ),
            },
        ),
    ],
    [],
)
